--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   searchable_listview: ^2.14.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
